add Java 17 support
- from https://github.com/SerlithNetwork/FastAsyncWorldedit-Legacy/commit/cb8b5f70cfde766bb12feb1d59283663a0a2b438