@@ -8,7 +8,16 @@
 
 FAWE is a fork of WorldEdit that has huge speed and memory improvements and considerably more features
 
-It is available for Bukkit, Forge, Sponge and Nukkit.
+It is available for Bukkit.
+
+## Additions
+* [Java 17 compatibility](https://github.com/DawningW/FastAsyncWorldedit-Legacy/commit/41c4ef8c245b4a8cf212606a00e6d093a47a9b6d)
+  * To run on Java 17, you have to add the following JVM args:
+    * `--add-opens=java.base/java.lang=ALL-UNNAMED`
+    * `--add-opens=java.base/java.lang.reflect=ALL-UNNAMED`
+* [Ytnoos security patch](https://github.com/ytnoos/FastAsyncWorldedit-Legacy/commit/12a01983c9650e4b1a4dbd067344d88cd89be1b1)
+
+
 
 ## Links 
 
